# TextIOTrap

./: README.md  changelog  pyproject.toml  requirements.txt  setup.py
examples/: examples.py  tiotrap.py
tiotrap/: __init__.py
tiotrap.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
